Cleanup minor warnings